--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <!-- displays site properly based on user's device -->
     <link rel="stylesheet" href="/style/reset.css" />
     <link rel="stylesheet" href="/style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       rel="icon"
@@ -30,50 +36,64 @@
   <body>
     <section class="images">
       <div class="background">
-        <img src="/images/bg-main-mobile.png" />
+        <img src="/images/bg-main-mobile.png" id="background-phone" />
+        <img src="/images/bg-main-desktop.png" id="background-desktop" />
       </div>
-      <div class="card-back">
-        <img src="/images/bg-card-back.png" />
-      </div>
-      <div class="card-front">
-        <img src="/images/bg-card-front.png" class="card" />
-        <img src="/images/card-logo.svg" class="logo-card" />
-      </div>
-    </section>
-    <section class="texts">
-      <div class="box-inputs">
-        <label for="name">Cardholder Name</label>
-        <input type="text" name="name" />
-        <label for="card-number">Card Number</label>
-        <input type="number" name="card-number"/>
-        <div>
-            <div class="block" name="date">
-              <div>
-                <label for="date">Exp. Date (MM/YY)</label>
-              </div>
-              <div class="month-year">
-                <input type="number" id="month"/>
-                <input type="number" />
-              </div>
-            </div>
-            <div class="block" name="cvc">
-              <div>
-                <label for="cvc">CVC</label>
-              </div>
-              <div>
-                <input type="password" />
-              </div>
-            </div>
+      <div class="cards">
+        <div class="card-back">
+          <img src="/images/bg-card-back.png" />
+          <h2 id="passwordCard">000</h2>
+        </div>
+        <div class="card-front">
+          <img src="/images/bg-card-front.png" class="card" />
+          <img src="/images/card-logo.svg" class="logo-card" />
+          <h1 id="numberCard" class="numberCard">0000 0000 0000 0000</h1>
+          <h2 id="nameCard">Jane Appleseed</h2>
+          <h2 id="dateCard">00/00</h2>
         </div>
       </div>
     </section>
+    <section class="texts">
+      <form class="box-inputs">
+        <label for="name">Cardholder Name</label>
+        <input type="text" name="name" placeholder="e.g. Jane Appleseed" />
+        <label for="card-number">Card Number</label>
+        <input
+          type="number"
+          name="card-number"
+          placeholder=" e.g. 1234 5678 9123 0000"
+        />
+        <div>
+          <div class="block" name="date">
+            <div>
+              <label for="date">Exp. Date (MM/YY)</label>
+            </div>
+            <div class="month-year">
+              <input type="number" id="month" placeholder="MM" />
+              <input type="number" placeholder="YY" />
+            </div>
+          </div>
+          <div class="block" name="cvc">
+            <div>
+              <label for="cvc">CVC</label>
+            </div>
+            <div>
+              <input type="password" placeholder="e.g. 123" />
+            </div>
+          </div>
+        </div>
+        <div class="box-button">
+          <button type="submit">Confirm</button>
+        </div>
+      </form>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </section>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
     <script src="/app.js"></script>
   </body>
 </html>
