--- a/index.html
+++ b/index.html
@@ -21,17 +21,6 @@
     />
 
     <title>Frontend Mentor | Interactive card details form</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <section class="images">
@@ -54,14 +43,22 @@
       </div>
     </section>
     <section class="texts">
-      <form class="box-inputs">
+      <form class="box-inputs" id="form">
         <label for="name">Cardholder Name</label>
-        <input type="text" name="name" placeholder="e.g. Jane Appleseed" />
+        <input
+          type="text"
+          name="name"
+          placeholder="e.g. Jane Appleseed"
+          id="nameInput"
+          required
+        />
         <label for="card-number">Card Number</label>
         <input
           type="number"
           name="card-number"
           placeholder=" e.g. 1234 5678 9123 0000"
+          id="numberInput"
+          required
         />
         <div>
           <div class="block" name="date">
@@ -69,8 +66,15 @@
               <label for="date">Exp. Date (MM/YY)</label>
             </div>
             <div class="month-year">
-              <input type="number" id="month" placeholder="MM" />
-              <input type="number" placeholder="YY" />
+              <input
+                type="number"
+                id="monthInput"
+                placeholder="MM"
+                min="01"
+                max="12"
+                required
+              />
+              <input type="number" placeholder="YY" id="yearInput" required/>
             </div>
           </div>
           <div class="block" name="cvc">
@@ -78,14 +82,31 @@
               <label for="cvc">CVC</label>
             </div>
             <div>
-              <input type="password" placeholder="e.g. 123" />
+              <input
+                type="password"
+                placeholder="e.g. 123"
+                id="passwordInput"
+                required
+              />
             </div>
           </div>
         </div>
         <div class="box-button">
-          <button type="submit">Confirm</button>
+          <button type="submit" id="confirm">Confirm</button>
         </div>
       </form>
+
+      <div id="completed">
+        <img src="/images/icon-complete.svg" />
+        <h2>Thank you!</h2>
+        <p>We've added your card details</p>
+        <div class="box-button">
+          <button type="submit" id="continue">Continue</button>
+        </div>
+      </div>
+
+      
+
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
